# booklist

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  sample_config  setup.py
booklist/: catalog.py  config.py  main.py
tests/: test_catalog.py  test_cmdline.py  test_config.py
